bug 21067 - disallow collapsing off currently active node's group (r=alfred)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@18537 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -629,10 +629,10 @@ sb-servicepane-group hbox.servicepane-group-header-wrapper {
 }
 
 sb-servicepane-group[collapsedChildren="true"] hbox.servicepane-group-header-wrapper:-moz-drag-over,
-sb-servicepane-group hbox.servicepane-group-header-wrapper:hover {
+sb-servicepane-group.collapsible hbox.servicepane-group-header-wrapper {
   background-position: center -20px;
 }
-sb-servicepane-group hbox.servicepane-group-header-wrapper:active {
+sb-servicepane-group.collapsible hbox.servicepane-group-header-wrapper:active {
   background-position: center -40px;
 }
 
